--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,13 @@
 }
 
 .header {
-  background-image: repeating-linear-gradient(45deg,
-      #3e6807,
-      #4a7305 10px,
-      #3e6807 10px,
-      #3e6807 10px);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #3e6807,
+    #4a7305 10px,
+    #3e6807 10px,
+    #3e6807 10px
+  );
   color: white;
   position: fixed;
   top: 0;
@@ -398,11 +400,13 @@
   height: auto;
   overflow: hidden;
   box-shadow: 0 1px 7px #3e6807;
-  background-image: repeating-linear-gradient(45deg,
-      #3e6807,
-      #4a7305 10px,
-      #3e6807 10px,
-      #3e6807 10px);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #3e6807,
+    #4a7305 10px,
+    #3e6807 10px,
+    #3e6807 10px
+  );
   justify-content: center;
   align-items: center;
   padding: 10px 0;
@@ -481,7 +485,7 @@
   max-width: 80%;
   margin: auto;
   position: relative;
-  overflow: hidden;
+  overflow: hidden; 
   margin-top: 30px;
 }
 
@@ -491,7 +495,7 @@
 }
 
 .product {
-  flex: 0 0 calc(20% - 20px);
+  flex: 0 0 calc(25% - 20px);
   box-sizing: border-box;
   text-align: center;
   margin-right: 10px;
@@ -823,19 +827,16 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
   flex: 4;
-
 }
 
 .home-resources-item-2 .home-product h3 {
   font-size: 24px;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product p {
   font-size: 16px;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product {
@@ -859,26 +860,22 @@
 .home-resources-item-2 .home-product:nth-child(1) {
   background-color: #5e971b;
   font-size: 16px;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product:nth-child(2) {
   background-color: #c57200;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product:nth-child(3) {
   background-color: #5e971b;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product:nth-child(4) {
   background-color: #b69a71;
-  font-family: "Inter",
-    serif;
+  font-family: "Inter", serif;
 }
 
 .home-resources-item-2 .home-product:nth-child(1) img {
@@ -888,10 +885,9 @@
 .home-resources-item-2 .home-product:nth-child(1) img,
 .home-resources-item-2 .home-product:nth-child(3) img {
   position: absolute;
-  bottom: 250px;
+  bottom: 74%;
   left: 30px;
 }
-
 
 .home-resources-item-2 .resources-title-2 {
   position: absolute;
@@ -907,15 +903,14 @@
   padding: 20px;
 }
 
-.home-resources-item-2 .home-product:nth-child(2) img
- {
+.home-resources-item-2 .home-product:nth-child(2) img {
   position: absolute;
-  bottom: -75px;
+  bottom: -22%;
   left: 30px;
 }
 .home-resources-item-2 .home-product:nth-child(4) img {
   position: absolute;
-  bottom: -40px;
+  bottom: -10%;
   left: 30px;
 }
 
