Fix HTML structure and script tags in product-details.html

--- a/site/view/product-details.html
+++ b/site/view/product-details.html
@@ -2352,11 +2352,12 @@
         </div>
       </div>
     </div>
- </div>
-    
+      </div>
+    </div>
+  </div>
   
-  
- <script src="../../public/js/header.js"></script>
-<script src="../../public/js/product-details.js"></script>
+  <script src="../../public/js/product-details.js"></script>
+  <script src="../../public/js/header.js"></script>
+</body>
 
 </html>
