Thêm thẻ option cho Tìm kiếm cửa hàng trong trang shop.html

--- a/site/view/shop.html
+++ b/site/view/shop.html
@@ -1992,11 +1992,34 @@
         <div class="container">
         <div class="main-content">
             <aside class="sidebar">
-                <h3>Tìm cửa hàng Cỏ Mềm</h3>
-                <ul>
-                    <li><label><input type="checkbox"> Tỉnh/Thành phố</label></li>
-                    <li><label><input type="checkbox"> Quận/Huyện</label></li>
-                </ul>
+                <div class="store-finder">
+  <h3 class="title">TÌM CỬA HÀNG CỎ MỀM</h3>
+
+  <div class="select-wrapper">
+    <select class="region-select">
+    <option value="" disabled selected hidden>Tất cả vùng/miền</option>
+    <option>Tất cả vùng/miền</option>
+    <option>Miền Bắc</option>
+    <option>Miền Trung</option>
+    <option>Miền Nam</option>
+  </select>
+
+            <select>
+                <option value="" disabled selected hidden>Tất cả tỉnh/TP</option>
+                <option>Tất cả tỉnh/TP</option>
+                <option>Hồ Chí Minh</option>
+                <option>Hà Nội</option>
+                <option>Đà Nẵng</option>
+             </select>
+
+                <select>
+                    <option>Tất cả Quận/Huyện</option>
+                    <option>Quận 1</option>
+                    <option>Quận 3</option>
+                </select>
+             </div>
+            </div>
+            <br>
                 <h3>Cỏ Mềm chào đón bạn ghé thăm:</h3>
                 <div class="shop-list">
                     <ul>
