--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -178,3 +178,67 @@ body {
                 margin-bottom: 24px;
             }
         }
+        .store-finder {
+  font-family: Inter, sans-serif;
+  max-width: 300px;
+}
+
+.title {
+  color: #2c2f39;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.select-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.custom-select {
+  background-color: #f2f2e9;
+  padding: 10px;
+  border-radius: 5px;
+  color: #333;
+  font-weight: 500;
+}
+
+select {
+  background-color: #f2f2e9;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  color: #333;
+  font-weight: 500;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h10L5 5z' fill='%23333'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 10px 5px;
+}
+.select-wrapper {
+  max-width: 300px;
+  font-family: Inter, sans-serif;
+}
+
+.region-select {
+  width: 100%;
+  background-color: #f2f2e9;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  color: #333;
+  font-size: 18px;
+  font-weight: 500;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h10L5 5z' fill='%23333'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 10px 5px;
+}
