--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,11 @@
 }
 
 .header {
-  background-image: repeating-linear-gradient(
-    45deg,
-    #3e6807,
-    #4a7305 10px,
-    #3e6807 10px,
-    #3e6807 10px
-  );
+  background-image: repeating-linear-gradient(45deg,
+      #3e6807,
+      #4a7305 10px,
+      #3e6807 10px,
+      #3e6807 10px);
   color: white;
   position: fixed;
   top: 0;
@@ -400,13 +398,11 @@
   height: auto;
   overflow: hidden;
   box-shadow: 0 1px 7px #3e6807;
-  background-image: repeating-linear-gradient(
-    45deg,
-    #3e6807,
-    #4a7305 10px,
-    #3e6807 10px,
-    #3e6807 10px
-  );
+  background-image: repeating-linear-gradient(45deg,
+      #3e6807,
+      #4a7305 10px,
+      #3e6807 10px,
+      #3e6807 10px);
   justify-content: center;
   align-items: center;
   padding: 10px 0;
@@ -485,7 +481,7 @@
   max-width: 80%;
   margin: auto;
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
   margin-top: 30px;
 }
 
@@ -908,6 +904,7 @@
   bottom: -22%;
   left: 30px;
 }
+
 .home-resources-item-2 .home-product:nth-child(4) img {
   position: absolute;
   bottom: -10%;
@@ -916,14 +913,15 @@
 
 .home-resources-item-2 .resources-title-1 {
   position: absolute;
-  bottom: 80px;
+  bottom: 35%;
   left: 0px;
   padding: 20px;
 }
 
 .home-resources-item-2 .resources-title-3 {
   position: absolute;
-  bottom: 100px;
+  bottom: 35%;
   left: 0px;
   padding: 20px;
 }
+
