--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -27,10 +27,10 @@ body {
             text-align: center;
         }
         .shop-info .banner img {
-            max-width: 80%;
+            max-width: 100%;
             border-radius: 8px;
             padding: 20px;
-            height: 400px;
+            height: auto;
         }
         .main-content {
             display: flex;
