--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,13 @@
 }
 
 .header {
-  background-image: repeating-linear-gradient(45deg,
-      #3e6807,
-      #4a7305 10px,
-      #3e6807 10px,
-      #3e6807 10px);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #3e6807,
+    #4a7305 10px,
+    #3e6807 10px,
+    #3e6807 10px
+  );
   color: white;
   position: fixed;
   top: 0;
@@ -23,7 +25,7 @@
   justify-content: space-between;
   align-items: center;
   width: 95%;
-  margin: -30px auto;
+  margin: -20px auto;
 }
 
 .header-top-left {
@@ -398,11 +400,13 @@
   height: auto;
   overflow: hidden;
   box-shadow: 0 1px 7px #3e6807;
-  background-image: repeating-linear-gradient(45deg,
-      #3e6807,
-      #4a7305 10px,
-      #3e6807 10px,
-      #3e6807 10px);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #3e6807,
+    #4a7305 10px,
+    #3e6807 10px,
+    #3e6807 10px
+  );
   justify-content: center;
   align-items: center;
   padding: 10px 0;
@@ -911,12 +915,10 @@
   left: 30px;
 }
 
-.home-resources-item-2 .resources-title-1,.home-resources-item-2 .resources-title-3 {
+.home-resources-item-2 .resources-title-1,
+.home-resources-item-2 .resources-title-3 {
   position: absolute;
   bottom: 20%;
   left: 0px;
   padding: 20px;
 }
-
-
-
