--- a/site/view/footter.html
+++ b/site/view/footter.html
@@ -76,4 +76,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
 </body>
+<script>
+  
+</script>
 </html>
