--- a/site/view/trangchu.html
+++ b/site/view/trangchu.html
@@ -21,6 +21,7 @@
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="../../public/css/style.css" />
+    <link rel="stylesheet" href="../../public/css/footer.css" />
 </head>
 <style></style>
 
@@ -72,7 +73,7 @@
       <div class="header-bottom">
         <ul class="pure-list" id="pure-list">
           <li class="title-san-pham">
-            <a href="sale.html">Sale</a>
+            <a href="product.html">Sale</a>
             <div class="pure-item">
               <div class="pure-item-left">
                 <ul class="pure-list-item">
@@ -2713,6 +2714,58 @@
         </div>
       </div>
     </section>
+    <!-- footer -->
+  <footer class="footer">
+  <div class="footer-container">
+    <div class="footer-section logo-contact" data-aos="fade-up">
+      <img src="../../public/img/logo.png" alt="Aura Beauty" class="logo" />
+      <p><i class="fas fa-map-marker-alt"></i> 862 Nguyễn Ảnh Thủ, Quận 1,<br>TP.HCM</p>
+      <p><i class="fas fa-phone-alt"></i> (096) 1367 862</p>
+      <p><i class="fas fa-envelope"></i> AuraBeauty@gmail.vn</p>
+      <div class="social-icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-pinterest-p"></i>
+      </div>
+    </div>
+
+    <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
+      <h4>Về Aura Beauty</h4>
+      <p>Câu chuyện thương hiệu</p>
+      <p>Về nhà máy</p>
+      <p>Tuyển dụng</p>
+    </div>
+
+    <div class="footer-section" data-aos="fade-up" data-aos-delay="200">
+      <h4>Hoạt động cộng đồng</h4>
+      <p>Xây dựng cho trẻ em</p>
+      <p>Trồng rừng</p>
+      <p>Chung tay phòng chống COVID</p>
+    </div>
+
+    <div class="footer-section" data-aos="fade-up" data-aos-delay="300">
+      <h4>Hướng dẫn mua hàng</h4>
+      <p>Chính sách mua hàng và thanh toán</p>
+      <p>Chính sách bảo hành</p>
+      <p>Chính sách đổi trả và hoàn tiền</p>
+      <p>Chính sách bảo mật thông tin</p>
+      <img src="../../public/img/z6853888623115_10b88d062b43f9f96e180e01be5b8c58.jpg" alt="DMCA" class="dmca-badge">
+    </div>
+
+    <div class="footer-section" data-aos="fade-up" data-aos-delay="400">
+      <h4>Thông tin liên hệ</h4>
+      <p><a href="mailto:cskh.so@comem.vn">cskh.so@comem.vn</a></p>
+      <p>0828001501</p>
+      <img src="../../public/img/image-removebg-preview (2).png" alt="Bộ công thương" class="gov-badge" />
+    </div>
+  </div>
+
+  <div class="subscribe" data-aos="fade-up" data-aos-delay="500">
+    <input type="email" placeholder="Đăng ký Email để nhận ưu đãi" />
+    <button>ĐĂNG KÝ</button>
+  </div>
+</footer>
   </div>
 </body>
 
