Cập nhật trang shop.html và css

--- a/site/view/trangchu.html
+++ b/site/view/trangchu.html
@@ -52,7 +52,7 @@
         </div>
         <div class="header-top-right">
           <div class="cart">
-            <a href="/cart" class="cart-link">
+            <a href="shop.html" class="cart-link">
               <i class="fas fa-home"></i>
               <span>Hệ thống cửa hàng</span></a>
           </div>
