--- a/site/view/shop.html
+++ b/site/view/shop.html
@@ -2078,6 +2078,7 @@
                 Xây trường cho trẻ em<br>
                 Tình thương<br>
                 Chung tay chống dịch COVID
+                 
             </div>
             <div>
                 <b>Hướng dẫn mua hàng</b><br>
@@ -2085,6 +2086,7 @@
                 Chính sách bảo hành<br>
                 Chính sách đổi trả<br>
                 Chính sách bảo mật thông tin
+                
             </div>
             <div>
                 <b>Thông tin liên hệ</b><br>
@@ -2096,8 +2098,27 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
+                
             </div>
+            
         </div>
+        <div class="subscribe" data-aos="fade-up" data-aos-delay="500">
+                  <input type="email" placeholder="Đăng ký Email để nhận ưu đãi" />
+                  <button>ĐĂNG KÝ</button>
+                  <div>
+                    <img src="../../public/img/z6853888623115_10b88d062b43f9f96e180e01be5b8c58.jpg" alt="DMCA" class="dmca-badge">
+                  </div>
+                  <div>
+                  <img src="../../public/img/image-removebg-preview (2).png" alt="Bộ công thương" class="gov-badge" />
+                </div>
+                <div class="footer-text">
+                  <span>
+                    Mỹ phẩm thiên nhiên
+                    <br>
+                    Lành và thật
+                  </span>
+                </div>
+                </div>
         <div class="footer-bottom">
             Công ty cổ phần Mỹ phẩm Thiên nhiên Cỏ Mềm<br>
             Địa chỉ: Số 10 ngõ 100 Nguyễn Xiển, Hà Nội<br>
