--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@
 .pure-item-left ul li a {
   color: #68762b;
   font-family: "Inter", serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
 }
 
@@ -249,6 +249,18 @@
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 10px;
+  position: relative;
+}
+.sale-badge {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  background: #ff8c1a;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 2px 10px;
+  border-radius: 4px;
 }
 
 .pure-item-right-content-skin:hover {
@@ -256,12 +268,26 @@
 }
 
 .pure-item-right-content-skin p {
-  text-decoration: none;
-  font-family: "Inter", serif;
+  min-height: 40px;
   font-size: 16px;
-  color: #222;
-  margin-top: 5px;
-  font-weight: normal;
+  font-weight: bold;
+  color: #3d640f;
+  margin: 10px 0;
+  font-family: "Inter", serif;
+  text-align: left;
+  display: -webkit-box;
+  /* Quan trọng */
+  -webkit-box-orient: vertical;
+  /* Quan trọng */
+  -webkit-line-clamp: 2;
+  /* Số dòng muốn hiển thị */
+  overflow: hidden;
+  /* Ẩn phần dư */
+  text-overflow: ellipsis;
+  /* Hiện ... */
+  line-height: 1.4em;
+  max-height: 2.8em;
+  /* line-height * 2 */
 }
 
 .pure-item-right-content-skin img {
@@ -282,14 +308,14 @@
 .pure-item-price-info .price {
   font-size: 16px;
   font-weight: bold;
-  color: #90c54b;
+  color: #d35400;
 }
 
 .pure-item-price-info .old-price {
-  text-decoration: line-through;
+  font-size: 14px;
   color: #999;
-  font-weight: 400;
-  margin-left: 15px;
+  text-decoration: line-through;
+  margin-left: 10px;
 }
 
 .pure-item {
@@ -520,6 +546,7 @@
 
 .product img {
   width: 100%;
+  height: 250px;
 }
 
 .card-item-content {
