--- a/public/css/shop1.css
+++ b/public/css/shop1.css
@@ -12,7 +12,7 @@ body {
   padding: 50px;
   margin: 24px 0;
   border-radius: 12px;
-  padding-top: 150px;
+
 }
 .shop-info .stats {
   display: flex;
@@ -90,7 +90,7 @@ b {
 }
 .shop-card img {
   width: 100%;
-  height: 120px;
+  height: auto;
   object-fit: cover;
 }
 .shop-card .info {
@@ -180,6 +180,11 @@ footer {
   .shops {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+@media (min-width: 1200px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width: 90%
+    }
 }
 @media (max-width: 900px) {
   .shops {
