--- a/site/view/login.html
+++ b/site/view/login.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aura Beauty</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="../../public/css/styles.css" />
 </head>
 <body>
   <div class="container">
     <div class="left-panel">
       <div class="logo">
-        <img src="logo.png" alt="">
+        <img src="../../public/img/logo.png" alt="">
       </div>
     </div>
     <div class="right-panel">
